incluido imagem nas publicacoes, ajustado o cadastro de usuario e incluido a taxa da plataforma
